<resources>
    <string name="app_name">AndroidShop</string>
    <string name="loading">加载中</string>
    <string name="re_login">当前账号已在其他设备上登录，是否重新登录？</string>
    <string name="data_error">网络出小差了</string>
    <string name="news_center">消息中心</string>
    <string name="user_register">用户注册</string>
    <string name="reset_pwd">重置密码</string>
    <string name="user_login">用户登录</string>
    <string name="input_invite">请输入邀请码</string>
    <string name="input_phone">请输入用户名</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="input_mail">请输入邮箱</string>
    <string name="register">注册</string>
    <string name="treaty">许可认证协议</string>
    <string name="input_pwd_again">请重新输入密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_question">请输入找回密码的问题</string>
    <string name="input_answer">请输入找回密码的答案</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="my_value">优惠券</string>
    <string name="buy_shop">优惠券领取</string>
    <string name="my_user_log">我的足迹</string>
    <string name="about_user_log">浏览过的历史</string>
    <string name="shareApp">分享APP</string>
    <string name="share_jajahome">分享JAJAHOME</string>
    <string name="setting">设置</string>
    <string name="account_address">个人设置</string>
    <string name="my_jajahome">jajahome</string>
    <string name="ziliao">个人资料</string>
    <string name="safe_user">账户与安全</string>
    <string name="change_pwd">修改密码</string>
    <string name="inform">接收通知</string>
    <string name="news">要开启或关闭消息的推送消息，请在手机的\"设置\"-\"通知\"中找到\"消息\"进行设置</string>
    <string name="cache">清除缓存</string>
    <string name="serve">服务与反馈</string>
    <string name="aboutUs">关于我们</string>
    <string name="exit">退出当前帐号</string>
    <string name="send">提交</string>


</resources>
