<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grag_by"
    android:orientation="vertical">

    <include layout="@layout/setting_title" />

    <RelativeLayout
        android:id="@+id/rl_ziliao"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_title"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/ziliao"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_ziliao"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="收货地址"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_safe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_address"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/safe_user"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_safe"
        android:background="@color/white">

        <TextView
            android:id="@+id/band_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_bang"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/change_pwd"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_inform"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/change_password"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/inform"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:text="打开"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_news"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_inform"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:text="@string/news"
        android:textSize="@dimen/text_size_14" />

    <RelativeLayout
        android:id="@+id/rl_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/tv_news"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/cache"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_serve"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_cache"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/serve"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:background="@color/div_color" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_aboutUs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_serve"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:text="@string/aboutUs"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/ic_right_back" />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_below="@+id/rl_aboutUs"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_login"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />
</RelativeLayout>