<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grag_by"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/ic_left_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/find_pwd"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size_16" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_phone" />

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_phone"
                android:padding="@dimen/dp_5"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/by_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_pwd" />

            <EditText
                android:id="@+id/edit_pwd_que"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_question"
                android:padding="@dimen/dp_5"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/by_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_pwd" />

            <EditText
                android:id="@+id/edit_pwd_ans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_question"
                android:padding="@dimen/dp_5"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/by_gray" />


    </LinearLayout>

    <Button
        android:id="@+id/find_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_login"
        android:text="@string/find_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_15" />


</LinearLayout>